--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,20 @@
     <groupId>org.example</groupId>
     <artifactId>PT2022_30221_ALEXANDRU_ANDREI_DENIS_ASSIGNMENT_1</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.8.2</version>
+        <scope>test</scope>
+    </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
